--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   "devDependencies": {
     "@types/boom": "^7.3.0",
     "@types/node": "^13.13.5",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
     "tap": "^12.5.3",
     "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -36,8 +42,10 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "start:dev": "ts-node-dev src/index.ts",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "npm run lint -- --fix",
     "start": "node dist/index.js",
+    "start:dev": "ts-node-dev src/index.ts",
     "test": "tap test/**/*.test.js"
   }
 }
