--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "ajv": "^6.12.2",
     "apollo-server-fastify": "^2.13.0",
     "class-validator": "^0.12.2",
+    "env-schema": "^1.1.0",
     "fastify": "^2.14.0",
     "fastify-autoload": "^1.0.0",
     "fastify-cli": "^1.5.0",
     "fastify-plugin": "^1.5.0",
+    "fluent-schema": "^1.0.1",
     "graphql": "^15.0.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0-rc.1"
