--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "prettier": "^2.0.5",
-    "tap": "^12.5.3",
-    "ts-node": "^8.10.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
@@ -49,6 +48,6 @@
     "lint:fix": "npm run lint -- --fix",
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev src/index.ts",
-    "test": "tap test/**/*.test.js"
+    "test": "echo NO TESTS YET"
   }
 }
